--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 #spring.session.store-type=none
 
+api.security.token.secret=my-secret-key-123
+
